--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,25 @@ version: '3'
 services:
   api:
     image: babak1199/simple-restapi
-    container_name: simple-restapi
+    # container_name: simple-restapi
     build: .
     networks:
       - backend
     ports:
       - "3600:3600"
     depends_on:
-      - database
+      - mongo
 
-  database:
+  mongo:
     image: 'mongo'
-    container_name: simple-restapi-db
+    # container_name: simple-restapi-db
     environment: 
-      - MONDO_INITDB_DATABASE=simple-restapi
+      - MONDO_INITDB_DATABASE=simple-restapi-db
       - MONDO_INITDB_ROOT_USERNAME=dbuser
       - MONDO_INITDB_ROOT_PASSWORD=AdminSimplePassword
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      - ./mongo-volume:/data/db
+      # - "./mongodata:/data/db"
     networks:
       - backend
     ports:
@@ -29,11 +29,11 @@ services:
   # web-cli:
   #   image: babak1199/simple-restapi
   #   links:
-  #     - database
+  #     - mongo
   #   networks:
   #     - backend
   #   command: sh
-
+  
 networks:
   backend:
     driver: bridge
