--- a/package.json
+++ b/package.json
@@ -3,9 +3,28 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "nyc": {
+    "check-coverage": true,
+    "lines": 95,
+    "statements": 95,
+    "functions": 100,
+    "branches": 95,
+    "exclude": [
+      "./test/**"
+    ],
+    "reporter": [
+      "json",
+      "lcov",
+      "text-summary"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint .",
+    "coverage": "nyc mocha --use_strict",
+    "cost": "cost-of-modules",
+    "test": "mocha",
+    "prerelease": "npm run lint && npm run coverage && cost-of-modules"
   },
   "repository": {
     "type": "git",
@@ -15,7 +34,7 @@
     "restapi",
     "nodejs"
   ],
-  "author": "",
+  "author": "Babak Akbarzadeh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/babak1199/simple-restapi/issues"
@@ -32,5 +51,13 @@
     "swagger-ui-express": "^4.1.4",
     "sync-request": "^6.1.0",
     "uuid": "^7.0.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "cost-of-modules": "^1.0.1",
+    "eslint": "^6.8.0",
+    "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
+    "sinon": "^9.0.2"
   }
 }
