Add volume to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,24 +15,16 @@ services:
     image: 'mongo'
     # container_name: simple-restapi-db
     environment: 
-      - MONDO_INITDB_DATABASE=simple-restapi-db
+      - MONDO_INITDB_DATABASE=simple-restapi
       - MONDO_INITDB_ROOT_USERNAME=dbuser
       - MONDO_INITDB_ROOT_PASSWORD=AdminSimplePassword
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      # - "./mongodata:/data/db"
+      - '${SIMPLE_RESTAPI_HOST_DATA}/mongodata:/data/db'
     networks:
       - backend
     ports:
       - '27017-27019:27017-27019'
-
-  # web-cli:
-  #   image: babak1199/simple-restapi
-  #   links:
-  #     - mongo
-  #   networks:
-  #     - backend
-  #   command: sh
   
 networks:
   backend:
