--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "homepage": "https://github.com/babak1199/simple-restapi#readme",
   "dependencies": {
+    "aws-xray-sdk": "^3.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
