--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "aws-xray-sdk": "^3.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
@@ -72,6 +73,7 @@
     "node-uuid": "^1.4.8",
     "swagger-ui-express": "^4.1.4",
     "sync-request": "^6.1.0",
+    "trim-request": "^1.0.6",
     "uuid": "^7.0.3",
     "validator": "^13.0.0"
   },
